# nordea-awm-poc

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.html  Dockerfile  EVAL.html  README.html  README.md  bm25.json  cloudbuild.yaml  pyproject.toml
app/: agent_monitor.py  fixtures.py  main.py  observability.py  orchestrator.py  schemas.py  settings.py
app/agents/: _base.py  chat.py  client_insights.py  intel_gathering.py  macro.py  news.py  opportunity_scout.py  planner.py  portfolio.py  synthesizer.py
app/intel/: live_market.py  snapshot_loader.py  world_monitor_client.py
app/llm/: prompt_loader.py  vertex_client.py
app/retrieval/: bm25.py  chunker.py  contextual.py  embedder.py  hybrid.py  qdrant_store.py  reranker.py
data/: bergstrom_portfolio.json  brief_cache_bergstrom.json  client_snapshot_bergstrom.json  corpus_fetch_log.json  signals_20260530.json  world_monitor_endpoints_discovered.json
data/corpus/: SOURCES.html  (+6 more)
deliverables/: Memo_to_Thomas.html
eval/: generate_questions.py  run_ragas.py  synthetic_qs.jsonl  trace_brief.py
fallback/: brief_static_20260601.html
frontend/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
qdrant_data/: meta.json
scripts/: build_index.py  fetch_corpus.py  mark_to_market.py  probe_grounding.py  probe_world_monitor.py  smoke_vertex.py  write_eval_html.py
tests/: test_api.py  test_chunker.py  test_contextual.py  test_embedder.py  test_fixtures.py  test_prompts.py  test_reranker.py  test_retrieval.py  test_schemas.py  test_smoke_e2e.py  test_world_monitor_client.py
(+49 files in other folders)
