[project]
name = "nordea-awm-poc"
version = "0.1.0"
description = "Agentic advisor-flow POC for Nordea AWM — five-stage brief generation over a Nordic UHNW persona."
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "google-genai>=1.0",
  "google-cloud-aiplatform>=1.74",
  "llama-index-core>=0.12",
  "llama-index-embeddings-vertex>=0.3",
  "qdrant-client>=1.12",
  "rank-bm25>=0.2.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "pypdf>=5.0",
  "beautifulsoup4>=4.12",
  "ragas>=0.2",
  "arize-phoenix>=5.0",
  "openinference-instrumentation-llama-index>=3.0",
  "python-dotenv>=1.0",
  "langchain-google-vertexai>=3.2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "live: test makes a live Vertex AI / network call (deselect with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py312"
